fixes accidental overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 body{
-  overflow: hidden;
+
   background: #F2F0E9;
   color: #3C4586;
   border:2px solid #3C4586;
